--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,6 @@
   <meta name="msapplication-tap-highlight" content="no">
   
  <title>Title page</title>
-{#    <link href="../static/main.3f6952e4.css" rel="stylesheet">#}
     <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/apple-icon-180x180.png">
     <link href="../static/assets/images/html_tag.png" rel="icon">
      <link href="../static/main.3f6952e4.css" rel="stylesheet">
@@ -80,31 +79,34 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          + 962 79 6969 904
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          tareq.judeh@outlook.com
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          08 Al-Sabr street, Al-Rawabi, Amman, Jordan.
                         </li>
                       </ul>
-                      <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
+                        <h3>Follow me on social networks</h3>
+                        <a href="https://www.facebook.com/tareq.m.joudeh" title="" class="fa-icon">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                        <a href="https://www.instagram.com/tareq_joudeh" title="" class="fa-icon">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/tareq-judeh-56051379" title="" class="fa-icon">
+                            <i class="fa fa-linkedin"></i>
+                        </a>
+                        <a href="https://github.com/TareqJudehGithub" title="" class="fa-icon">
+                            <i class="fa fa-github"></i>
+                        </a>
 
                     </div>
                   </div>
@@ -135,8 +137,6 @@
   });
 </script>
 
-
--->
  <script type="text/javascript" src="../static/main.70a66962.js"></script>
 
 </body>
