--- a/templates/works.html
+++ b/templates/works.html
@@ -15,7 +15,7 @@
 
     <link href="../static/main.3f6952e4.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/apple-icon-180x180.png">
-    <link href="../static/assets/images/favicon.ico" rel="icon">
+    <link href="../static/assets/images/html_tag.png" rel="icon">
 
  </head>
 
