--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,143 +2,93 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
-  
- <title>Title page</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/apple-icon-180x180.png">
-    <link href="../static/assets/images/html_tag.png" rel="icon">
-     <link href="../static/main.3f6952e4.css" rel="stylesheet">
+    {% extends "base.html" %}
+    {% block head %}
+        {{ super() }}
+    {% endblock %}
 </head>
 
-<body class="">
-<div id="site-border-left"></div>
-<div id="site-border-right"></div>
-<div id="site-border-top"></div>
-<div id="site-border-bottom"></div>
- <!-- Add your content of header -->
-<header>
-  <nav class="navbar  navbar-fixed-top navbar-default">
-    <div class="container">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+<body>
+    {% block content %}
+       {{ super() }}
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-        </ul>
-
-
-      </div> 
-    </div>
-  </nav>
-</header>
-
-<div class="section-container">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="section-container-spacer text-center">
-            <h1 class="h2">04 : Contact me</h1>
-          </div>
-          
-          <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-               <form action="{{ url_for('submit_form') }}" method="post" class="reveal-content">
-                  <div class="row">
-                    <div class="col-md-7">
-                      <div class="form-group">
-                          <input type="text" name="username" class="form-control" id="name" placeholder="Name" style="color: black">
-                        <input name="email" type="email" class="form-control" id="email" placeholder="Email" style="color: black">
-                      </div>
-                      <div class="form-group">
-                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject" style="color: black">
-                      </div>
-                      <div class="form-group">
-                        <textarea name="message" class="form-control" rows="5" placeholder="Leave me a message here" style="color: black"></textarea>
-                      </div>
-                      <button type="submit" value="submit" class="btn btn-default btn-lg">Send</button>
-                    </div>
-                    <div class="col-md-5 address-container">
-                      <ul class="list-unstyled">
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                          + 962 79 6969 904
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-at" aria-hidden="true"></i>
-                          </span>
-                          tareq.judeh@outlook.com
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                          </span>
-                          08 Al-Sabr street, Al-Rawabi, Amman, Jordan.
-                        </li>
-                      </ul>
-                        <h3>Follow me on social networks</h3>
-                        <a href="https://www.facebook.com/tareq.m.joudeh" title="" class="fa-icon">
-                            <i class="fa fa-facebook"></i>
-                        </a>
-                        <a href="https://www.instagram.com/tareq_joudeh" title="" class="fa-icon">
-                            <i class="fa fa-instagram"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/in/tareq-judeh-56051379" title="" class="fa-icon">
-                            <i class="fa fa-linkedin"></i>
-                        </a>
-                        <a href="https://github.com/TareqJudehGithub" title="" class="fa-icon">
-                            <i class="fa fa-github"></i>
-                        </a>
-
-                    </div>
+        <div class="section-container">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="section-container-spacer text-center">
+                    <h1 class="h2">04 : Contact me</h1>
                   </div>
-                </form>
+
+                  <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                       <form action="{{ url_for('submit_form') }}" method="post" class="reveal-content">
+                          <div class="row">
+                            <div class="col-md-7">
+                              <div class="form-group">
+                                  <input type="text" name="username" class="form-control" id="name" placeholder="Name" style="color: black">
+                                  <input name="email" type="email" class="form-control" id="email" placeholder="Email" style="color: black">
+                              </div>
+                              <div class="form-group">
+                                <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject" style="color: black">
+                              </div>
+                              <div class="form-group">
+                                <textarea name="message" class="form-control" rows="5" placeholder="Leave me a message here" style="color: black"></textarea>
+                              </div>
+                              <button type="submit" value="submit" class="btn btn-default btn-lg">Send</button>
+                            </div>
+                            <div class="col-md-5 address-container">
+                              <ul class="list-unstyled">
+                                <li>
+                                  <span class="fa-icon">
+                                    <i class="fa fa-phone" aria-hidden="true"></i>
+                                  </span>
+                                  + 962 79 6969 904
+                                </li>
+                                <li>
+                                  <span class="fa-icon">
+                                    <i class="fa fa-at" aria-hidden="true"></i>
+                                  </span>
+                                  tareq.judeh@outlook.com
+                                </li>
+                                <li>
+                                  <span class="fa-icon">
+                                    <i class="fa fa fa-map-marker" aria-hidden="true"></i>
+                                  </span>
+                                  08 Al-Sabr street, Al-Rawabi, Amman, Jordan.
+                                </li>
+                              </ul>
+                                <h3>Follow me on social networks</h3>
+                                <a href="https://www.facebook.com/tareq.m.joudeh" title="" class="fa-icon">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/tareq_joudeh" title="" class="fa-icon">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                                <a href="https://www.linkedin.com/in/tareq-judeh-56051379" title="" class="fa-icon">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                                <a href="https://github.com/TareqJudehGithub" title="" class="fa-icon">
+                                    <i class="fa fa-github"></i>
+                                </a>
+
+                            </div>
+                          </div>
+                        </form>
+                    </div>
+
+                  </div>
+
+               </div>
+              </div>
             </div>
-
           </div>
-         
-       </div>
-      </div>
-    </div>
-  </div>
 
+    {% endblock %}
 
-<footer class="footer-container text-center" style="margin-top: 25%">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>© Tareq Judeh {{ year }}</p>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-     navActivePage();
-  });
-</script>
-
- <script type="text/javascript" src="../static/main.70a66962.js"></script>
-
+    {% block footer %}
+        {{ super() }}
+    {% endblock %}
 </body>
 
 </html>
