--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,28 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
-
-  <title>Title page</title>
-    <link href="../static/main.3f6952e4.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/apple-icon-180x180.png">
-    <link href="../static/assets/images/html_tag.png" rel="icon">
+{#  <meta charset="UTF-8">#}
+{#  <meta content="IE=edge" http-equiv="X-UA-Compatible">#}
+{#  <meta content="width=device-width,initial-scale=1" name="viewport">#}
+{#  <meta content="description" name="description">#}
+{#  <meta name="google" content="notranslate" />#}
+{#  <meta content="Mashup templates have been developped by Orson.io team" name="author">#}
+{##}
+{#  <!-- Disable tap highlight on IE -->#}
+{#  <meta name="msapplication-tap-highlight" content="no">#}
+{##}
+{#  <title>Title page</title>#}
+{#    <link href="../static/main.3f6952e4.css" rel="stylesheet">#}
+{#    <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/apple-icon-180x180.png">#}
+{#    <link href="../static/assets/images/html_tag.png" rel="icon">#}
+    {% extends "base.html" %}
+    {% block head %}
+        {{ super() }}
+    {% endblock %}
 </head>
 
-<body class="minimal">
+<body>
+{% block content %}
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
@@ -43,7 +48,7 @@
 
         </ul>
 
-      </div> 
+      </div>
     </div>
   </nav>
 </header>
@@ -81,9 +86,8 @@
          movingBackgroundImage();
       });
     </script>
-
-
     <script type="text/javascript" src="../static/main.70a66962.js"></script>
+    {% endblock %}
 
 </body>
 
