Refactored /submit_form route and contact.html into flask wtf form. Added Jinja2 child templates to every HTML page, for a more readable and a cleaner code.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <p class="text-center">&copy; Copyright {{ year }} Tareq Judeh</p>
+                        <p class="text-center">&copy; {{ year }} Tareq Judeh</p>
                     </div>
                 </div>
             </div>
