--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -58,10 +58,9 @@
               </div>
             </div>
           </div>
+        {% include "footer.html" %}
     {% endblock %}
-    {% block footer %}
-        {{ super() }}
-    {% endblock %}
+
 </body>
 
 </html>
