--- a/templates/work.html
+++ b/templates/work.html
@@ -52,12 +52,9 @@
             </div>
           </div>
         </div>
-
+        {% include "footer.html" %}
     {% endblock %}
 
-    {% block footer %}
-        {{ super() }}
-    {% endblock %}
 </body>
 
 </html>
