--- a/templates/works.html
+++ b/templates/works.html
@@ -126,11 +126,10 @@
             </div>
           </div>
         </div>
+        {% include "footer.html" %}
     {% endblock %}
 
-    {% block footer %}
-        {{ super() }}
-    {% endblock %}
+
 
 </body>
 
